@@ -1,3 +1,8 @@
+Thu Oct 24 23:51:15 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: better detection of jumps due to vertical
+	  asymptotes to avoid drawing the vertical lines
+
 Sun Oct 20 23:44:25 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* lib/equation_solving/newton.gel: Add HalleysMethod
